<resources>
    <string name="app_name">SustApp</string>
    <string name="main_page">Main Page</string>
    <string name="start_activity">Welcome to my chat app</string>
    <string name="register_btn">Create new account?</string>
    <string name="registeration">انشاء الحساب</string>
    <string name="sitting">Sitting</string>
    <string name="have_Account">Already have account</string>
    <string name="password_hint">Enter Password</string>
    <string name="email_hint">Enter Your Emial</string>
    <string name="username_hint">Enter user name</string>
    <string name="login">تسجيل الدخول</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="account_sitting">اعدادات الحساب</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_display">User Name</string>
    <string name="user_status">user status go here</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">تغيير الحاله</string>
    <string name="status_change_status">Change Status</string>
    <string name="status_save_change">Change Status</string>
    <string name="all_users">كل المستخدمين</string>
    <string name="profile_user_name">User Name</string>
    <string name="profile_status">user status</string>
    <string name="profile_send_request_btn">Send Friend Rrquest</string>
    <string name="profile_total_friend">Toatal Friend</string>
    <string name="cancel_friend_request">Decline Friend Request</string>
    <string name="custom_bar_title">Title</string>
    <string name="about">About and phone number</string>
    <string name="phone_num">+294902649933</string>
    <string name="warn">This is not your username or pin .This name will be visible to your zaitapp contacts</string>
    <string name="name_place_holder">Adams Green</string>
    <string name="hash_tag">\@adams.green</string>
    <string name="intro">هذا التطبيق يتيح لك التواصل مع كل طلاب الجامعه مسجلين بالرقم الجامعي </string>
</resources>
