<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradinet"
    tools:context="com.example.mohamed.chatapp.ProfileActivity">

    <include
        android:id="@+id/pro_tool"
        layout="@layout/main_tool_bar" />

    <LinearLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pro_tool"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:minHeight="300dp"
            android:minWidth="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avator" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_user_name"
            android:textColor="@color/txt_color"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/profile_total_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/profile_total_friend"
            android:textColor="@color/txt_color" />

        <TextView
            android:id="@+id/profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/profile_status"
            android:textColor="@color/txt_color" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_info"
        android:orientation="vertical">

        <Button
            android:id="@+id/profile_send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_style"
            android:text="@string/profile_send_request_btn"
            android:textColor="@color/txt_color" />

        <Button
            android:id="@+id/profile_decline_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_style"
            android:text="@string/cancel_friend_request"
            android:textColor="@color/txt_color" />
    </LinearLayout>


</RelativeLayout>
