<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regester_background_color"
    tools:context="com.example.mohamed.chatapp.RegisterActivity">
    <include
        android:id="@+id/register_tool_bar"
        layout="@layout/main_tool_bar"
        android:layout_width="match_parent"

        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785"
/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_tool_bar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            app:srcCompat="@drawable/male_user" />

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/txt_color"
            android:hint="@string/username_hint"
            android:textColorHint="@color/txt_color"
            android:background="@drawable/input_style"
            android:padding="11dp"
            android:inputType="textPersonName"
            android:layout_margin="20dp"
         />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/txt_color"
            android:hint="@string/email_hint"
            android:textColorHint="@color/txt_color"
            android:background="@drawable/input_style"
            android:padding="11dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:textColor="@color/txt_color"
            android:hint="@string/password_hint"
            android:background="@drawable/input_style"
            android:padding="11dp"
            android:textColorHint="@color/txt_color"

            android:inputType="textPassword" />

        <Button
            android:id="@+id/Regsteration_btn"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_margin="20sp"
            android:text="@string/registeration"
            android:background="@drawable/btn_style"
            android:textColor="@color/txt_color" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/regester_background_color"
            android:text="@string/login"

            android:textColor="@color/txt_color" />
    </LinearLayout>
</RelativeLayout>
