<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohamed.chatapp.LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/login_area"
        android:orientation="vertical">

        <EditText
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/txt_color"
            android:background="@drawable/input_style"
            android:textColor="@color/have_account"
            android:padding="11dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:textColor="@color/have_account"
            android:hint="@string/password_hint"
            android:background="@drawable/input_style"
            android:padding="11dp"
            android:textColorHint="@color/txt_color"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/Login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textColor="@color/txt_color"
            android:background="@drawable/btn_style"
            android:text="@string/login"/>
    </LinearLayout>

</RelativeLayout>
