<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DADFE1"
    tools:context="com.example.mohamed.chatapp.SittingActivity">
    <include layout="@layout/main_tool_bar"  android:id="@+id/sitting_tb"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sitting_image"
        android:layout_width="179dp"
        android:layout_height="179dp"
        android:layout_below="@+id/sitting_tb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:maxHeight="179dp"
        android:maxWidth="179dp"
        android:minHeight="179dp"
        android:minWidth="179dp"
        android:src="@drawable/placeholder"
        app:srcCompat="@drawable/placeholder" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sitting_image"
        android:layout_marginTop="26dp"
        android:id="@+id/cardView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/sittin_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/user_name_display"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/sitting_change_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@color/txt_color"
                app:srcCompat="@drawable/edit" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <ImageButton
        android:id="@+id/sitting_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sitting_image"
        android:layout_alignParentEnd="true"

        android:layout_marginBottom="13dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/profile_cam_btn"
        app:srcCompat="@drawable/edit_cam" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/cardView"
        app:cardElevation="3dp"
        android:layout_marginTop="80dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="15sp"
                android:textColor="@color/have_account"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/sitting_user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"

                android:text="TextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/user_single_image"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"

                android:text="@string/phone_num" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardView"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        android:text="@string/warn" />

</RelativeLayout>
